Remove opendistro_performance_analyzer for now